<resources>
    <string name="app_name" translatable="false">Distimate</string>
    <string name="france">France</string>
    <string name="japan">Nihon</string>
    <string name="germany">Deutschland</string>
    <string name="states">United States</string>
    <string name="flag_image" translatable="false">Country Flag</string>
    <string name="country_image" translatable="false">Country image</string>
    <string name="country_name_prefix">Country: </string>
    <string name="score_prefix">"Score: "</string>
    <string name="time_left">Time Left</string>
    <string name="confirm">CONFIRM</string>
    <string name="skip">SKIP</string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="question_prefix">What is the distance between</string>
    <string name="and">and</string>
    <string name="cities">"Cities: %s"</string>
    <string name="area">"Area: %s km²"</string>
    <string name="country">Country</string>
    <string name="you_selected">"You selected "</string>
    <string name="cancel">CANCEL</string>
    <string name="back">BACK TO MENU</string>
    <string name="loading_questions">Loading questions…</string>
    <string name="game_locale">en</string>
    <string name="start">Start</string>
    <string name="distance" translatable="false">%s km</string>
    <string name="no_question_left">There is no question left.</string>
    <string name="actual_distance_prefix">The distance was</string>
    <string name="distance_guess_prefix">you guessed</string>
    <string name="zero" translatable="false">0</string>
    <string name="final_score_prefix">"Final score: "</string>
    <string name="actual_distance_between_cities">Actual distance between cities</string>
    <string name="game_summary">Game summary</string>
    <string name="distance_between_two_cities">Distance between %s%nand %s:%n%s km</string>
    <string name="question_retrieval_failed">Could not retrieve the next question. Please check your connection.</string>
</resources>