<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".PlayerInputFragment">

    <EditText
        android:id="@+id/distanceGuessValueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_your_guess"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/distanceGuessConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/distanceGuessSkipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/skip"/>
    </LinearLayout>
</LinearLayout>